# Github-Dev-Card-Generator

./: README.md
github-card-generator/: .env.example  GEMINI.md  README.md  docker-compose.yml
github-card-generator/backend/: Dockerfile  agent.py  list_models.py  main.py  mcp_server.py  pyproject.toml  requirements.txt  test_mcp.py
github-card-generator/backend/static/cards/: HarshvardhanSingh-13.html  PadmavathiPachitala.html  Sahithi7396.html  kundurukarthik15-gif.html  torvalds.html
github-card-generator/frontend/: index.html
