[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.1",
    "google-adk>=1.33.0",
    "google-generativeai>=0.8.6",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "mcp>=1.27.1",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.47.0",
]
